<resources>
    <string name="app_name">PexelsViews</string>
    <string name="search">Search</string>
    <string name="home_icon">Home</string>
    <string name="bookmarks_icon">Bookmarks</string>
    <string name="download">Download</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_name_surname">Name Surname</string>
    <string name="image_not_found">Image not found</string>
    <string name="explore">Explore</string>
    <string name="try_again">Try Again</string>
    <string name="empty_results">No results found</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="not_saved_results">You haven\'t saved anything yet</string>
    <string name="something_went_wrong">Something went wrong…</string>
    <string name="refresh">Refresh</string>
    <string name="network_connection_detected">Network connection detected\nWould you like refresh data?</string>
</resources>