<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".presentation.bookmarks.BookmarksFragment">

    <TextView
        android:id="@+id/bookmarkTextView"
        style="@style/titleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/bookmarks"
        android:textColor="?attr/colorOnPrimaryContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/bookmarkTextView"
        app:trackColor="?attr/colorOnTertiary"
        app:trackThickness="3dp" />

    <LinearLayout
        android:id="@+id/emptyBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/bodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_saved_results" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="12dp" />

        <TextView
            android:id="@+id/exploreView"
            style="@style/titleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            android:textColor="?attr/colorPrimary" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/progressIndicator" />

</androidx.constraintlayout.widget.ConstraintLayout>